--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
 - python==3.8
 - pandas==1.5.3
 - numpy
-- install scikit-learn
+- scikit-learn
 - pip
 - pip:
   # works for regular pip packages
